fix(layer-switcher): display issues on small screens

--- a/src/css/layer-manager.css
+++ b/src/css/layer-manager.css
@@ -66,4 +66,5 @@
   /* opacity: 0; */
   display: none;
   left: 0;
+  max-width: 100%;
 }
