--- a/src/css/layer-switcher.css
+++ b/src/css/layer-switcher.css
@@ -40,7 +40,7 @@ div[id^="basic-tools_ID_"] {
   display: flex;
   flex-direction: row;
   padding: 10px;
-  max-width: 250px;
+  max-width: calc(100% - 70px);
 }
 div[id^="landmark-basic-tools_ID_"],
 div[id^="route-basic-tools_ID_"] {
@@ -63,6 +63,7 @@ div[id^="thumbnail_ID_"] {
 .wrap-tools-layers {
   padding-left: 10px;
   text-align: left;
+  max-width: calc(100% - 60px);
 }
 
 span[id^="landmark-title_ID_"],
